FIX | Thumbnail spacing in ProjectCard component

--- a/components/ProjectCard/style.module.scss
+++ b/components/ProjectCard/style.module.scss
@@ -17,6 +17,7 @@
     }
 
     .thumbnail {
+      display: flex;
       width: 100%;
     }
 
